Several bug fixes and improvements - position, buttons are marked properly, mouse cursor is invisible in full screen, loader added for when loading data.

--- a/src/themes/classic/css/yox.theme.classic.css
+++ b/src/themes/classic/css/yox.theme.classic.css
@@ -7,6 +7,7 @@
     -webkit-user-select: none;
     -o-user-select: none;
     user-select: none;
+    overflow: hidden !important;
 }
 .yox-theme-classic-title{
     background: -moz-linear-gradient(center top , rgba(255, 255, 255, 0.3), transparent) repeat scroll 0 0 transparent;
@@ -66,7 +67,9 @@
         box-shadow: 0px 5px 15px rgba(0,0,0,.3) inset;
         background-color: rgba(255,255,255,.2);
     }
-
+    .yox-theme-classic-controls .yox-theme-classic-button:active{
+            background-color: rgba(255,255,255,.26);
+    }
     .yox-theme-classic-controls .yox-theme-classic-button:last-child{ margin-right: 0; }
     .yox-theme-classic-controls .yox-theme-classic-button-fullscreen{ background-position: 0 0 }
     .yox-theme-classic-controls .yox-theme-classic-button-fullscreen:hover{ background-position: 0 -7px }
@@ -79,7 +82,7 @@
 
     .yox-theme-classic-infoPanel{
         position: absolute;
-        z-index: 100;
+        z-index: 1001;
         background: rgba(0,0,0,.9);
         color: White;
         width: 100%;
@@ -92,10 +95,25 @@
         opacity: 0;
     }
         .yox-theme-classic-info{
-            padding: 7px 14px;
             border-top: solid 1px rgba(255,255,255,.1);
             font-size: 11pt;
         }
+            .yox-theme-classic-info-position{
+                border-right: 1px solid rgba(255, 255, 255, 0.1);
+                color: #777;
+                float: left;
+                font-size: 8pt;
+                line-height: 34px;
+                width: 60px;
+                white-space: nowrap;
+                text-align: center;
+                cursor: default;
+            }
+            .yox-theme-classic-info-position:hover{ color: White }
+            .yox-theme-classic-info-text{
+                display: inline-block;
+                padding: 7px 10px;
+            }
     .yox-theme-classic-controlBtn{
         position: absolute;
         z-index: 1000;
@@ -127,8 +145,13 @@
 .yox-theme-classic-viewer{ height: 100%; overflow: hidden; }
 .yox-theme-classic-thumbnailsPanel{
     padding-top: 1px;
-    height: 60px; background: #000; white-space: nowrap;
+    height: 60px; background-color: #000; white-space: nowrap;
     position: relative;
+}
+.yox-theme-classic-loading .yox-theme-classic-thumbnailsPanel{
+    background-image: url(../img/ajax-loader-data.gif);
+    background-position: center center;
+    background-repeat: no-repeat;
 }
 
 .yox-theme-classic-thumbnailsBtn{
